--- a/Project/ui.html
+++ b/Project/ui.html
@@ -6,74 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/Project/style.css">
 </head>
-<style>
-   *{
-        padding: 0;
-        margin: 0;
-        box-sizing: border-box;
-        list-style: none;
-        text-decoration: none;
-        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-   }
-   .sidebar{
-        position: fixed;
-        left: 0;
-        width: 250px;
-        height: 100%;
-        background-color: #042331;
-   }
-   .sidebar header {
-        font-size: 30px;
-        text-align: center;
-        line-height: 120px ;
-        color: white;
-        background-color: #053850;
-        user-select: none;
-   }
-   .sidebar ul a{
-        display: block;
-        height: 100%;
-        width: 100%;
-        line-height: 90px;
-        font-size: 20px;
-        color: white;
-        padding-left: 40px;
-        box-sizing: border-box;
-        border-top:  1px solid rgb(68, 61, 61);
-        border-bottom: 1px solid  rgb(68, 61, 61);
-        transition: .4s;
-   }
-   .sidebar ul a i{
-        margin: 20px;
-        color: wheat;
-   }
-   ul li:hover a {
-        padding-left: 50px;
-   }
-  .sidebar   img {
-    width: 30px;
-    height: 30px;
-     border-radius: 40px;
-   }
-   .nav {
-       width: 100%;
-       height: 30%;
-       background-color: rgb(190, 132, 25);
-   }
-   section{
-        background:blue;
-        background-position: center;
-        background-size: cover;
-        height: 13vh;
-   }
-</style>
-
 <body>
        <div class="sidebar">
            <header><img src="https://avatars.githubusercontent.com/u/73914495?v=4" alt="">       Profile</header>
             <ul>
+                <li><a href="">Book Search<i class="fas fa-search"></i></a></li>
                 <li><a href="">Add book<i class="fas fa-plus"></i></a></li>
                 <li><a href="">Show books<i class="fas fa-eye"></i></a></li>
                 <li><a href="">Delete book<i class="fas fa-trash"></i></a></li>
