--- a/Project/ui.html
+++ b/Project/ui.html
@@ -12,8 +12,8 @@
        <div class="sidebar">
            <header>Profile</header>
             <ul>
-                <li><a href="">Book Search<i class="fas fa-search"></i></a></li>
-                <li><a href="">Add book<i class="fas fa-plus"></i></a></li>
+                <li><a href="book_search.html">Book Search<i class="fas fa-search"></i></a></li>
+                <li><a href="ui.html">Add book<i class="fas fa-plus"></i></a></li>
                 <li><a href="">Show books<i class="fas fa-eye"></i></a></li>
                 <li><a href="">Delete book<i class="fas fa-trash"></i></a></li>
                 <li><a href="">Profile Settings<i class="fas fa-user"></i></a></li>
@@ -39,28 +39,6 @@
        </section>
        <script src="https://www.gstatic.com/firebasejs/8.9.0/firebase-app.js"></script>
        <script src="https://www.gstatic.com/firebasejs/8.9.0/firebase-firestore.js"></script>
-       <script type="module">
-        // Import the functions you need from the SDKs you need
-        // TODO: Add SDKs for Firebase products that you want to use
-        // https://firebase.google.com/docs/web/setup#available-libraries
-        // Your web app's Firebase configuration
-        const firebaseConfig = {
-          apiKey: "AIzaSyBjnjOLNcpdCO1JN7lmEUp_fxcaXJReVTk",
-          authDomain: "book-management-system-3b821.firebaseapp.com",
-          projectId: "book-management-system-3b821",
-          storageBucket: "book-management-system-3b821.appspot.com",
-          messagingSenderId: "536599902616",
-          appId: "1:536599902616:web:9f0b8b24aae8eb1bb113ed"
-        };
-        // Initialize Firebase
-        firebase.initializeApp(firebaseConfig);
-        const db = firebase.firestore()
-        db.collection("Book").get()
-        .then((res) => {
-             res.forEach(book => console.log(book.data()));
-        })
-        //add it to the user interface : 
-
-      </script>
+       <script src="/js/firebase.js"></script>
 </body>
 </html>
