--- a/Project/ui.html
+++ b/Project/ui.html
@@ -12,10 +12,10 @@
        <div class="sidebar">
            <header>Profile</header>
             <ul>
-                <li><a href="book_search.html">Book Search<i class="fas fa-search"></i></a></li>
+                <li><a href="">Book Search<i class="fas fa-search"></i></a></li>
                 <li><a href="ui.html">Add book<i class="fas fa-plus"></i></a></li>
                 <li><a href="">Show books<i class="fas fa-eye"></i></a></li>
-                <li><a href="">Delete book<i class="fas fa-trash"></i></a></li>
+                <li><a href="book_search.html">Delete book<i class="fas fa-trash"></i></a></li>
                 <li><a href="">Profile Settings<i class="fas fa-user"></i></a></li>
                 <div class="button">
                     <button class="but">Log Out</button>
@@ -29,12 +29,12 @@
                       
                     </div>
                     <div class="book">
-                         <label>Book</label>
-                         <input id="name" placeholder="Enter Book Name"type="text">
+                         <label>Book Name</label>
+                         <input required id="name" placeholder="Enter Book Name"type="text">
                     </div>
                     <div class="author">
                          <label>Author</label>
-                         <input id="author" placeholder="Enter Author Name" type="text">
+                         <input required id="author" placeholder="Enter Author Name" type="text">
                     </div>
                     <button>Add book</button>
                </form>
