--- a/Authentication/auth.html
+++ b/Authentication/auth.html
@@ -14,13 +14,24 @@
           </div>
            <form class="form">
                 <div class="user">
+                    <label>E-mail</label>
                      <input id="user" type="email" placeholder="Insert your E-Mail">
                 </div>
                 <div class="password" >
+                    <label>password</label>  
                      <input type="password" placeholder="Insert your password" id="password">
                 </div>
-                <button type="submit">Sign In</button>
+                <button type="submit" onclick="signIn()">Sign In</button>
+                <div class="signup">
+                     Not a member Yet?<a onclick="Signup()" href="#">Sign up</a>
+                </div>
            </form>
       </div>
+      <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+      <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
+      <script src="https://www.gstatic.com/firebasejs/8.9.0/firebase-firestore.js"></script>
+      <script src="/js/firebase.js"></script>
+      <script src="/Authentication/signup.js">
+</script>
 </body>
 </html>
