--- a/Project/ui.html
+++ b/Project/ui.html
@@ -10,7 +10,7 @@
 </head>
 <body>
        <div class="sidebar">
-           <header>Profile</header>
+           <header>qzdqzdqz</header>
             <ul>
                 <li><a href="">Book Search<i class="fas fa-search"></i></a></li>
                 <li><a href="ui.html">Add book<i class="fas fa-plus"></i></a></li>
@@ -41,6 +41,7 @@
              </div>
        </section>
        <script src="https://www.gstatic.com/firebasejs/8.9.0/firebase-app.js"></script>
+       <script src="https://www.gstatic.com/firebasejs/8.9.0/firebase-auth.js"></script>
        <script src="https://www.gstatic.com/firebasejs/8.9.0/firebase-firestore.js"></script>
        <script src="/js/firebase.js"></script>
        <script src="/js/add.js"></script>
