--- a/Project/Delete.html
+++ b/Project/Delete.html
@@ -36,6 +36,14 @@
                          <label> Author</label>
                          <input required id="author" placeholder="Enter Author Name" type="text">
                     </div>
+                    <div class="date">
+                        <label>Enter Edition</label>
+                        <input   id="date" placeholder="Enter Edition" type="number">
+                   </div>
+                   <div class="isbn">
+                    <label>Enter ISBN</label>
+                    <input  id="isbn" placeholder="Enter ISBN  'International Standard Book Number'" type="text">
+               </div>
                     <button>Delete book</button>
                </form>
              </div>
