--- a/Project/ui.html
+++ b/Project/ui.html
@@ -15,7 +15,7 @@
                 <li><a href="">Book Search<i class="fas fa-search"></i></a></li>
                 <li><a href="ui.html">Add book<i class="fas fa-plus"></i></a></li>
                 <li><a href="">Show books<i class="fas fa-eye"></i></a></li>
-                <li><a href="book_search.html">Delete book<i class="fas fa-trash"></i></a></li>
+                <li><a href="Delete.html">Delete book<i class="fas fa-trash"></i></a></li>
                 <li><a href="">Profile Settings<i class="fas fa-user"></i></a></li>
                 <div class="button">
                     <button class="but">Log Out</button>
@@ -26,16 +26,23 @@
              <div class="center">
                 <form>
                     <div  class="text">
-                      
                     </div>
                     <div class="book">
-                         <label>Book Name</label>
+                         <label>Enter Title</label>
                          <input required id="name" placeholder="Enter Book Name"type="text">
                     </div>
                     <div class="author">
-                         <label>Author</label>
+                         <label>Enter Author</label>
                          <input required id="author" placeholder="Enter Author Name" type="text">
                     </div>
+                    <div class="date">
+                        <label>Enter Edition</label>
+                        <input required  id="date" placeholder="Enter Edition" type="number">
+                   </div>
+                   <div class="isbn">
+                    <label>Enter ISBN</label>
+                    <input required id="isbn" placeholder="Enter ISBN  'International Standard Book Number'" type="text">
+               </div>
                     <button>Add book</button>
                </form>
              </div>
