--- a/Project/Delete.html
+++ b/Project/Delete.html
@@ -18,7 +18,7 @@
                 <li><a href="/project/book_search.html">Delete book<i class="fas fa-trash"></i></a></li>
                 <li><a href="">Profile Settings<i class="fas fa-user"></i></a></li>
                 <div class="button">
-                    <button class="but">Log Out</button>
+                    <button class="but" onclick="">Log Out</button>
                 </div>
             </ul>
        </div>
@@ -50,6 +50,7 @@
        </section>
        <script src="https://www.gstatic.com/firebasejs/8.9.0/firebase-app.js"></script>
        <script src="https://www.gstatic.com/firebasejs/8.9.0/firebase-firestore.js"></script>
+       <script src="https://www.gstatic.com/firebasejs/8.9.0/firebase-auth.js"></script>
        <script src="/js/firebase.js"></script>
        <script src="/js/delete.js"></script>
 </body>
