--- a/Project/Delete.html
+++ b/Project/Delete.html
@@ -10,12 +10,12 @@
 </head>
 <body>
        <div class="sidebar">
-            <header>dqdqzd</header>
+            <header>Profile Name</header>
             <ul>
                 <li><a href="">Book Search<i class="fas fa-search"></i></a></li>
                 <li><a href="ui.html">Add book<i class="fas fa-plus"></i></a></li>
-                <li><a href="">Show books<i class="fas fa-eye"></i></a></li>
-                <li><a href="/project/book_search.html">Delete book<i class="fas fa-trash"></i></a></li>
+                <li><a href="/project/show_list.html">Show books<i class="fas fa-eye"></i></a></li>
+                <li><a href="/project/Delete.html">Delete book<i class="fas fa-trash"></i></a></li>
                 <li><a href="">Profile Settings<i class="fas fa-user"></i></a></li>
                 <div class="button">
                     <button class="but" onclick="">Log Out</button>
