--- a/Project/ui.html
+++ b/Project/ui.html
@@ -10,11 +10,11 @@
 </head>
 <body>
        <div class="sidebar">
-           <header>qzdqzdqz</header>
+           <header>Profile Name</header>
             <ul>
                 <li><a href="">Book Search<i class="fas fa-search"></i></a></li>
                 <li><a href="ui.html">Add book<i class="fas fa-plus"></i></a></li>
-                <li><a href="">Show books<i class="fas fa-eye"></i></a></li>
+                <li><a href="show_list.html">Show books<i class="fas fa-eye"></i></a></li>
                 <li><a href="Delete.html">Delete book<i class="fas fa-trash"></i></a></li>
                 <li><a href="">Profile Settings<i class="fas fa-user"></i></a></li>
                 <div class="button">
