--- a/Project/show_list.html
+++ b/Project/show_list.html
@@ -18,7 +18,7 @@
             <li><a href="/project/Delete.html">Delete book<i class="fas fa-trash"></i></a></li>
             <li><a href="">Profile Settings<i class="fas fa-user"></i></a></li>
             <div class="button">
-                <button class="but" onclick="">Log Out</button>
+                <button class="but">Log Out</button>
             </div>
         </ul>
    </div>
