--- a/Authentication/auth.html
+++ b/Authentication/auth.html
@@ -13,6 +13,10 @@
             <h1>Sign In</h1>
           </div>
            <form class="form">
+               <div class="username">
+                    <label>Username</label>
+                     <input id="username" type="text" placeholder="Insert your Username">
+                </div>
                 <div class="user">
                     <label>E-mail</label>
                      <input id="user" type="email" placeholder="Insert your E-Mail">
