--- a/Project/settings.html
+++ b/Project/settings.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="sidebar">
-        <header>Profile Name</header>
+        <header></header>
         <ul>
             <li><a href="">Book Search<i class="fas fa-search"></i></a></li>
             <li><a href="ui.html">Add book<i class="fas fa-plus"></i></a></li>
