--- a/Authentication/auth.html
+++ b/Authentication/auth.html
@@ -5,9 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/Authentication/auth.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <title>Document</title>
 </head>
 <body>
+    
       <div class="center">
           <div class="text">
             <h1>Sign In</h1>
@@ -30,6 +32,11 @@
                      Not a member Yet?<a onclick="Signup()" href="#">Sign up</a>
                 </div>
            </form>
+      </div>
+      <div class="loader-wrapper">
+          <span class="loader">
+               <span class="loader-inner"></span>
+        </span>
       </div>
       <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
       <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
