--- a/Authentication/auth.html
+++ b/Authentication/auth.html
@@ -17,15 +17,15 @@
            <form class="form">
                <div class="username">
                     <label>Username</label>
-                     <input id="username" type="text" placeholder="Insert your Username">
+                     <input required id="username" type="text" placeholder="Insert your Username">
                 </div>
                 <div class="user">
                     <label>E-mail</label>
-                     <input id="user" type="email" placeholder="Insert your E-Mail">
+                     <input required id="user" type="email" placeholder="Insert your E-Mail">
                 </div>
                 <div class="password" >
                     <label>password</label>  
-                     <input type="password" placeholder="Insert your password" id="password">
+                     <input required type="password" placeholder="Insert your password" id="password">
                 </div>
                 <button type="submit" onclick="signIn()">Sign In</button>
                 <div class="signup">
