--- a/Project/settings.html
+++ b/Project/settings.html
@@ -18,13 +18,14 @@
             <li><a href="ui.html">Add book<i class="fas fa-plus"></i></a></li>
             <li><a href="/project/show_list.html">Show books<i class="fas fa-eye"></i></a></li>
             <li><a href="/project/Delete.html">Delete book<i class="fas fa-trash"></i></a></li>
-            <li><a href="settings.html">Profile Settings<i class="fas fa-user"></i></a></li>
+            <li><a href="settings.html">Profile Credentials<i class="fas fa-user"></i></a></li>
             <div class="button">
                 <button class="but" onclick="">Log Out</button>
             </div>
         </ul>
    </div>
    <div class="center">
+        <h1>Profile Credentials</h1>
         <form>
         </form>
    </div>
