--- a/Project/show_list.html
+++ b/Project/show_list.html
@@ -17,7 +17,7 @@
             <li><a href="ui.html">Add book<i class="fas fa-plus"></i></a></li>
             <li><a href="/project/show_list.html">Show books<i class="fas fa-eye"></i></a></li>
             <li><a href="/project/Delete.html">Delete book<i class="fas fa-trash"></i></a></li>
-            <li><a href="settings.html">Profile Settings<i class="fas fa-user"></i></a></li>
+            <li><a href="settings.html">Profile<i class="fas fa-user"></i></a></li>
             <div class="button">
                 <button class="but">Log Out</button>
             </div>
