--- a/Authentication/auth.html
+++ b/Authentication/auth.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Authentication/auth.css">
+    <link rel="stylesheet" href="/css/auth.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <title>Document</title>
 </head>        
@@ -41,7 +41,7 @@
       <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
       <script src="https://www.gstatic.com/firebasejs/8.9.0/firebase-firestore.js"></script>
       <script src="/js/firebase.js"></script>
-      <script src="/Authentication/signup.js">
+      <script src="/js/signup.js">
 </script>
 </body>
 </html>
