--- a/Project/Delete.html
+++ b/Project/Delete.html
@@ -11,7 +11,9 @@
 </head>
 <body>
        <div class="sidebar">
-            <header></header>
+            <header>
+                 <img src="#" alt="">
+            </header>
             <ul>
                 <li><a href="">Book Search<i class="fas fa-search"></i></a></li>
                 <li><a href="ui.html">Add book<i class="fas fa-plus"></i></a></li>
