--- a/Project/ui.html
+++ b/Project/ui.html
@@ -12,6 +12,7 @@
 <body>
        <div class="sidebar">
            <header>
+                <img src="" alt="" id="img">
            </header>
             <ul>
                 <li><a href="">Book Search<i class="fas fa-search"></i></a></li>
@@ -56,6 +57,7 @@
        <script src="https://www.gstatic.com/firebasejs/8.9.0/firebase-app.js"></script>
        <script src="https://www.gstatic.com/firebasejs/8.9.0/firebase-auth.js"></script>
        <script src="https://www.gstatic.com/firebasejs/8.9.0/firebase-firestore.js"></script>
+       <script src="https://www.gstatic.com/firebasejs/8.9.0/firebase-storage.js"></script>
        <script src="/js/firebase.js"></script>
        <script src="/js/add.js"></script>
 </body>
