--- a/Project/settings.html
+++ b/Project/settings.html
@@ -12,7 +12,9 @@
 </head>
 <body>
     <div class="sidebar">
-        <header><img src="#" alt=""></header>
+        <header>
+            <img src="" alt="" id="img">
+       </header>
         <ul>
             <li><a href="">Book Search<i class="fas fa-search"></i></a></li>
             <li><a href="ui.html">Add book<i class="fas fa-plus"></i></a></li>
@@ -35,6 +37,7 @@
    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
+   <script src="https://www.gstatic.com/firebasejs/8.9.0/firebase-storage.js"></script>
    <script src="/js/firebase.js"></script>
    <script src="/js/sett.js"></script>
 </body>
