--- a/Authentication/signup.html
+++ b/Authentication/signup.html
@@ -35,10 +35,10 @@
                 </div>
            </form>
       </div>
-      <!-- <div class="loader-wrapper">
+      <div class="loader-wrapper">
         <span class="loader">
              <span class="loader-inner"></span>
-      </span> -->
+      </span>
       </div>
       <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
       <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
