--- a/Project/settings.html
+++ b/Project/settings.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <link rel="stylesheet" href="/css/set.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="sidebar">
@@ -16,11 +18,11 @@
             <img src="" alt="" id="img">
        </header>
         <ul>
-            <li><a href="">Book Search<i class="fas fa-search"></i></a></li>
-            <li><a href="ui.html">Add book<i class="fas fa-plus"></i></a></li>
-            <li><a href="/project/show_list.html">Show books<i class="fas fa-eye"></i></a></li>
-            <li><a href="/project/Delete.html">Delete book<i class="fas fa-trash"></i></a></li>
-            <li><a href="settings.html">Profile<i class="fas fa-user"></i></a></li>
+            <li><a href=""><i class="fas fa-search"></i>Book Search</a></li>
+            <li><a href="ui.html"><i class="fas fa-plus"></i>Add book</a></li>
+            <li><a href="show_list.html"><i class="fas fa-eye"></i>Show books</a></li>
+            <li><a href="Delete.html"><i class="fas fa-trash"></i>Delete book</a></li>
+            <li><a href="settings.html"><i class="fas fa-user"></i>Profile</a></li>
             <div class="button">
                 <button class="but" onclick="">Log Out</button>
             </div>
