--- a/Authentication/signup.html
+++ b/Authentication/signup.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/auth.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <title>Document</title>
 </head>        
 <body>
@@ -26,7 +30,8 @@
                      <input required type="password" placeholder="Insert your password" id="password">
                 </div>
                 <div class="image">
-                    <label>Choose Profile picture</label>
+                      <label class="label" for="Profile"><i class="fas fa-image"></i> &nbsp;
+                        Choose Profile picture</label>
                       <input type="file" id="Profile">
                 </div>
                 <button type="submit" onclick="Signup() ">SIGN UP</button>
