--- a/Project/ui.html
+++ b/Project/ui.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <link rel="stylesheet" href="/css/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -15,11 +18,11 @@
                 <img src="" alt="" id="img">
            </header>
             <ul>
-                <li><a href="">Book Search<i class="fas fa-search"></i></a></li>
-                <li><a href="ui.html">Add book<i class="fas fa-plus"></i></a></li>
-                <li><a href="show_list.html">Show books<i class="fas fa-eye"></i></a></li>
-                <li><a href="Delete.html">Delete book<i class="fas fa-trash"></i></a></li>
-                <li><a href="settings.html">Profile<i class="fas fa-user"></i></a></li>
+                <li><a href=""><i class="fas fa-search"></i>Book Search</a></li>
+                <li><a href="ui.html"><i class="fas fa-plus"></i>Add book</a></li>
+                <li><a href="show_list.html"><i class="fas fa-eye"></i>Show books</a></li>
+                <li><a href="Delete.html"><i class="fas fa-trash"></i>Delete book</a></li>
+                <li><a href="settings.html"><i class="fas fa-user"></i>Profile</a></li>
                 <div class="button">
                     <button class="but">Log Out</button>
                 </div>
