--- a/Authentication/auth.html
+++ b/Authentication/auth.html
@@ -27,6 +27,9 @@
                     <label>password</label>  
                      <input required type="password" placeholder="Insert your password" id="password">
                 </div>
+                <div class="forget">
+                     <a onclick="forget()" href="#">Forget password ?</a>
+                </div>
                 <button type="submit" onclick="signIn()">SIGN IN</button>
                 <div class="signup">
                      Not a member Yet?<a href="signup.html">Sign up</a>
