--- a/Project/Delete.html
+++ b/Project/Delete.html
@@ -42,13 +42,13 @@
                   </a>
                </li>
                <li>
-                  <a href="">
+                  <a href="/project/show_list.html">
                        <i class='bx bx-search-alt-2' ></i>
                        <span class="link_name">Search Book</span>
                   </a>
                </li>
                <li>
-                  <a href="">
+                  <a href="/project/settings.html">
                        <i class='bx bxs-cog' ></i>
                        <span class="link_name">Settings</span>
                   </a>
@@ -57,17 +57,17 @@
           </ul>
           <div class="profile-details">
                <div class="profile-content">
-                    <img src="/img/téléchargement.jpg" alt="">
+                    <img src="" alt="" id="img">
                </div>
                <div class="name-job">
                     <div class="profile_name">
-                         hamza ouabiba
+                         <p></p>
                     </div>
                     <div class="job">
-                         web developer
+                         Library
                     </div>
                </div>
-               <button><i class='bx bx-log-out' ></i></button>
+               <button class="button"><i class='bx bx-log-out' ></i></button>
           </div>
      </div>
        <section>
@@ -102,6 +102,6 @@
        <script src="https://www.gstatic.com/firebasejs/8.9.0/firebase-auth.js"></script>
        <script src="https://www.gstatic.com/firebasejs/8.9.0/firebase-storage.js"></script>
        <script src="/js/firebase.js"></script>
-       <!-- <script src="/js/delete.js"></script> -->
+       <script src="/js/delete.js"></script>
 </body>
 </html>
