--- a/Project/ui.html
+++ b/Project/ui.html
@@ -46,13 +46,13 @@
                     </a>
                  </li>
                  <li>
-                    <a href="">
+                    <a href="/project/show_list.html">
                          <i class='bx bx-search-alt-2' ></i>
                          <span class="link_name">Search Book</span>
                     </a>
                  </li>
                  <li>
-                    <a href="">
+                    <a href="/project/settings.html">
                          <i class='bx bxs-cog' ></i>
                          <span class="link_name">Settings</span>
                     </a>
@@ -60,19 +60,19 @@
                  
             </ul>
             <div class="profile-details">
-                 <div class="profile-content">
-                      <img src="" alt="" id="img">
-                 </div>
-                 <div class="name-job">
-                      <div class="profile_name">
-                           <p></p>
-                      </div>
-                      <div class="job">
-                           Library
-                      </div>
-                 </div>
-                 <button class="button"><i class='bx bx-log-out' ></i></button>
-            </div>
+               <div class="profile-content">
+                    <img src="" alt="" id="img">
+               </div>
+               <div class="name-job">
+                    <div class="profile_name">
+                         <p></p>
+                    </div>
+                    <div class="job">
+                         Library
+                    </div>
+               </div>
+               <a href="" class="button"><i class='bx bx-log-out' ></i></a>
+          </div>
        </div>
        <section>
              <div class="center">
