--- a/Project/settings.html
+++ b/Project/settings.html
@@ -15,23 +15,63 @@
 </head>
 <body>
     <div class="sidebar">
-        <header>
-            <img src="" alt="" id="img">
-       </header>
-        <ul>
-            <li><a href=""><i class="fas fa-search"></i>Book Search</a></li>
-            <li><a href="ui.html"><i class="fas fa-plus"></i>Add book</a></li>
-            <li><a href="show_list.html"><i class="fas fa-eye"></i>Show books</a></li>
-            <li><a href="Delete.html"><i class="fas fa-trash"></i>Delete book</a></li>
-            <li><a href="settings.html"><i class="fas fa-user"></i>Profile</a></li>
-            <div class="button">
-                <button class="but" onclick="">Log Out</button>
-            </div>
+        <div class="logo-details">
+           <i class='bx bx-library'></i>
+             <span class="logo_name">Laborator</span>
+        </div>
+        <ul class="nav-links">
+             <li>
+                <a href="/project/ui.html">
+                     <i class='bx bxs-grid-alt'></i>
+                     <span  class="link_name">Dashboard</span>
+                </a>
+             </li>
+             <li>
+                <a href="/project/ui.html">
+                     <i class='bx bxs-book-add' ></i>
+                     <span class="link_name">Add Book</span>
+                </a>
+             </li>
+             <li>
+                <a href="/project/Delete.html">
+                     <i class='bx bxs-book-alt'></i>
+                     <span class="link_name">Delete Book</span>
+                </a>
+             </li>
+             <li>
+                <a href="/project/settings.html">
+                     <i class='bx bxs-grid-alt'></i>
+                     <span class="link_name">Dashboard</span>
+                </a>
+             </li>
+             <li>
+                <a href="/project/show_list.html">
+                     <i class='bx bx-search-alt-2' ></i>
+                     <span class="link_name">Search Book</span>
+                </a>
+             </li>
+             <li>
+                <a href="/project/settings.html">
+                     <i class='bx bxs-cog' ></i>
+                     <span class="link_name">Settings</span>
+                </a>
+             </li>
+             
         </ul>
-   </div>
-   <div class="center">
-        <form>
-        </form>
+        <div class="profile-details">
+            <div class="profile-content">
+                 <img src="" alt="" id="img">
+            </div>
+            <div class="name-job">
+                 <div class="profile_name">
+                      <p></p>
+                 </div>
+                 <div class="job">
+                      Library
+                 </div>
+            </div>
+            <button class="button"><i class='bx bx-log-out' ></i></button>
+       </div>
    </div>
    <div class="loader-wrapper">
     <span class="loader">
